--- a/signup-uitest/build.gradle
+++ b/signup-uitest/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        minSdkVersion 18
+        minSdkVersion 16
         targetSdkVersion 23
         testApplicationId 'com.hasbrain.usersignupinfo.test'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -35,7 +35,7 @@ dependencies {
     compile 'com.android.support.test:rules:0.4.1'
     compile 'org.hamcrest:hamcrest-core:1.3'
     compile 'com.android.support.test.espresso:espresso-core:2.2.1'
-    compile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
+//    compile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
     compile 'com.squareup.spoon:spoon-client:1.1.9'
 }
 
