--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,9 @@ checkout:
     - rm -rf app
     - mkdir solutions
     - git clone "$TARGET_REPO" solutions
+    - cd solutions
+    - git checkout solution
+    - cd ..
     - cp -r solutions/app app
 test:
   pre:
