--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,8 @@ test:
         background: true
         parallel: true
     - circle-android wait-for-boot
+    - sleep 30
+    - adb shell input keyevent 82
   override:
     - pwd
     - ./gradlew signup-uitest:connectedAndroidTest
