[ADD] Add sleep timeout

--- a/circle.yml
+++ b/circle.yml
@@ -13,6 +13,7 @@ test:
         parallel: true
     - cd solutions && ./gradlew assembleDebug
     - circle-android wait-for-boot
+    - sleep 30
     - adb shell input keyevent 82
   override:
     - cd solutions && ./gradlew signup-uitest:connectedAndroidTest
