--- a/signup-uitest/build.gradle
+++ b/signup-uitest/build.gradle
@@ -1,5 +1,18 @@
 apply plugin: 'com.android.test'
 
+buildscript {
+    repositories {
+        mavenLocal()
+        mavenCentral()
+//        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+    }
+
+    dependencies {
+//        classpath 'com.shazam.fork:fork-gradle-plugin:1.2.0-SNAPSHOT'
+//        classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.0.5-SNAPSHOT'
+    }
+}
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
@@ -15,18 +28,9 @@ android {
     targetVariant 'debug'
 
 }
+
+//apply plugin: 'fork'
 //apply plugin: 'spoon'
-//
-//spoon {
-//    // for debug output
-//    debug = true
-//
-//    // To run a single test class
-//    className = 'fully.qualified.TestCase'
-//
-//    // To run a single method in TestCase
-//    methodName = 'testMyApp'
-//}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -36,6 +40,6 @@ dependencies {
     compile 'org.hamcrest:hamcrest-core:1.3'
     compile 'com.android.support.test.espresso:espresso-core:2.2.1'
 //    compile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
-    compile 'com.squareup.spoon:spoon-client:1.1.9'
+    compile 'com.squareup.spoon:spoon-client:1.3.1'
 }
 
