--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ test:
     - sleep 30
     - adb shell input keyevent 82
   override:
-    - cd solutions && ./gradlew signup-uitest:connectedAndroidTest
+    - cd solutions && ./gradlew signup-uitest:spoonDebug
   post:
     - cp -r solutions/signup-uitest/build/spoon/* $CIRCLE_TEST_REPORTS
 notify:
