--- a/signup-uitest/build.gradle
+++ b/signup-uitest/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.android.support.test:rules:0.4.1'
     compile 'org.hamcrest:hamcrest-core:1.3'
     compile 'com.android.support.test.espresso:espresso-core:2.2.1'
+    compile 'com.android.support.test.espresso:espresso-intents:2.2.1'
 //    compile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
     compile 'com.squareup.spoon:spoon-client:1.3.1'
 }
