[FIX] Fix sdcard error on circleCI.

--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,8 @@ checkout:
     - ./prepare_solution.sh
 test:
   pre:
-    - emulator -avd circleci-android22 -no-audio -no-window:
+    - mksdcard -l e 512M mysdcard.img
+    - emulator -avd circleci-android22 -no-audio -no-window -sdcard mysdcard.img:
         background: true
         parallel: true
     - cd solutions && ./gradlew assembleDebug
