--- a/signup-uitest/src/main/AndroidManifest.xml
+++ b/signup-uitest/src/main/AndroidManifest.xml
@@ -3,4 +3,4 @@
         android:name="android.support.test.runner.AndroidJUnitRunner"
         android:targetPackage="com.hasbrain.usersignupinfo"
         />
-</manifest>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/><uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/></manifest>
